tests/Rules/Structure/Fixtures/valid/partial_component_fragment.html.twig
{# partial component - should not be treated as a full page #}
<div class="card">{{ content }}</div>
