tests/Rules/Structure/Fixtures/invalid/duplicate_main.html.twig
{# 1 errors #}
<div role="main">Content A</div>
<div role="main">Content B</div>
